Fix overflow in top stats table (#836)

--- a/src/assets/less/components/top-stats-table.less
+++ b/src/assets/less/components/top-stats-table.less
@@ -108,8 +108,20 @@
 					}
 
 					.file-name {
-						text-overflow: ellipsis;
 						word-break: break-all;
+
+						@media (min-width: @screen-lg-min) {
+							word-break: normal;
+							text-overflow: ellipsis;
+
+							> a {
+								width: 100%;
+								display: inline-block;
+								white-space: nowrap;
+								text-overflow: ellipsis;
+								overflow: hidden;
+							}
+						}
 					}
 
 					.hits {
